fix(Tournaments): align footer items to center

--- a/src/pages/Tournaments/Tournament.module.scss
+++ b/src/pages/Tournaments/Tournament.module.scss
@@ -63,7 +63,7 @@
   &Actions {
     display: flex;
     gap: var(--size-12);
-    align-items: centerS;
+    align-items: center;
   }
 }
 
@@ -75,6 +75,8 @@
     }
   }
 
+  display: flex;
+  align-items: center;
   text-transform: uppercase;
   font-size: var(--size-12--rem);
   font-weight: 600;
